<resources>
    <string name="app_name">MyToDos</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">e.g., Eat less at dinner</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="radio_no_repeat">No</string>
    <string name="radio_daily_repeat">Daily</string>
    <string name="radio_weekly_repeat">Weekly</string>
    <string name="radio_monthly_repeat">Monthly</string>
    <string name="image_description">button image</string>
    <string name="about_text">My First ToDo Application</string>
    <string name="add_todos">Add a Todo…</string>
    <string name="text_text_view">Text View</string>
    <string name="text_repeat">Repeat</string>
    <string name="text_username">Enter username</string>
    <string name="text_password">Enter password</string>
    <string name="title_login">TODO APPLICATION</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_account">account</string>
    <string name="text_repeat_password">Repeat password</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_change_password">Change password</string>
    <string name="text_greet_user">Welcome</string>
</resources>