<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/title_login"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:hint="@string/text_username"
        android:autofillHints="username"
        android:inputType="textPersonName"
        android:id="@+id/text_username"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:autofillHints="password"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:id="@+id/text_password"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/btn_login"
        android:id="@+id/btn_login"
        />

    <Button
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/btn_register"
        android:id="@+id/btn_register"
        />
</LinearLayout>