<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/text_greet_user"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/btn_logout"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/text_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:visibility="gone"
       />

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/text_repeat_password"
        android:autofillHints="password"
        android:visibility="gone"
        android:inputType="textPassword"
    />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password"            app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/btn_change_password"
        />
</androidx.constraintlayout.widget.ConstraintLayout>