<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <EditText
        android:id="@+id/enter_todo_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="@string/enter_todo_hint"
        android:inputType="textPersonName"
        android:padding="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/repeat_cycle_todo_button"
        android:layout_width="108dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/ic_baseline_outlined_flag_24" />

    <ImageButton
        android:id="@+id/save_todo_button"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:scaleX="0.4"
        android:scaleY="0.4"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toEndOf="@+id/repeat_cycle_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24" />

    <ImageButton
        android:id="@+id/today_calendar_button"
        android:layout_width="98dp"
        android:layout_height="71dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et"
        app:chipIconTint="@color/purple_200"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <LinearLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_cycle_todo_button">


        <TextView
            android:id="@+id/textView"
            android:layout_width="244dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/due_date_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.497"/>


        <CalendarView
            android:id="@+id/calendar_view"
            android:layout_width="318dp"
            android:layout_height="296dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next_week_chip"
            app:layout_constraintVertical_bias="0.16000003"
            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_priority"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_cycle_todo_button">

        <RadioButton
            android:id="@+id/radioButton_no_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_no_repeat" />

        <RadioButton
            android:id="@+id/radioButton_daily_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_daily_repeat" />

        <RadioButton
            android:id="@+id/radioButton_weekly_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_weekly_repeat" />

        <RadioButton
            android:id="@+id/radioButton_monthly_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radio_monthly_repeat" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="calendar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>